Create teacher controller class
